--- a/tomcat-dep.yaml
+++ b/tomcat-dep.yaml
@@ -38,3 +38,20 @@ spec:
             port: 8080
           initialDelaySeconds: 10
           periodSeconds: 5
+
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: tomcat-service
+  labels:
+    app: tomcat
+spec:
+  type: LoadBalancer
+  ports:
+  - port: 80
+    targetPort: 8080
+    protocol: TCP
+  selector:
+    app: tomcat
