--- a/tomcat-dep.yaml
+++ b/tomcat-dep.yaml
@@ -1,36 +1,24 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: Pod
 metadata:
-  name: tomcat-deployment
+  name: tomcatapp
   labels:
-    app: tomcat
+    app: tomcatapp
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: tomcat
-  template:
-    metadata:
-      labels:
-        app: tomcat
-    spec:
-      containers:
-      - name: tomcat
-        image: gomathi747/cicd:latest
-        ports:
-        - containerPort: 8080    
+  containers:
+  - name: tomcat
+    image: gomathi747/cicd:latest 
+    ports:
+    - containerPort: 8080 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: tomcat-service
-  labels:
-    app: tomcat
+  name: tomcatappsvc
 spec:
-  type: LoadBalancer
+  type: NodePort
+  selector:
+    app: tomcatapp
   ports:
   - port: 80
     targetPort: 8080
-    protocol: TCP
-  selector:
-    app: tomcat
