--- a/tomcat-dep.yaml
+++ b/tomcat-dep.yaml
@@ -1,20 +1,37 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: tomcatapp
+  name: tomcat-deployment
   labels:
     app: tomcatapp
 spec:
-  containers:
-  - name: tomcat
-    image: gomathi747/cicd:latest 
-    ports:
-    - containerPort: 8080 
+  replicas: 1
+  selector:
+    matchLabels:
+      app: tomcatapp
+  template:
+    metadata:
+      labels:
+        app: tomcatapp
+    spec:
+      containers:
+      - name: tomcat
+        image: gomathi747/cicd:latest
+        ports:
+        - containerPort: 8080
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: tomcatappsvc
+  name: tomcat-service
 spec:
   type: NodePort
   selector:
@@ -22,3 +39,5 @@ spec:
   ports:
   - port: 80
     targetPort: 8080
+    nodePort: 30007 # Explicitly define NodePort (optional, range: 30000-32767)
+
