--- a/tomcat-dep.yaml
+++ b/tomcat-dep.yaml
@@ -33,8 +33,9 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app: tomcatapp
+    app: tomcat # Match the labels in your Deployment
   ports:
-  - port: 80
-    targetPort: 8080
+  - port: 80         # Port the service exposes externally
+    targetPort: 8080 # Port the container listens on
+    nodePort: 8888   # Fixed port on the host machine
 
