--- a/tomcat-dep.yaml
+++ b/tomcat-dep.yaml
@@ -21,7 +21,7 @@ spec:
         - name: TOMCAT_USERNAME
           value: "admin"
         - name: TOMCAT_PASSWORD
-          value: "admin"
+          value: "pass"
         resources:
           requests:
             memory: "256Mi"
